--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -86,7 +86,7 @@
               <div class="card-body">
                 
 
-                <center><a href="/myacc" class="btn btn-dark">MY ACCOUNT</a></center>
+                <center><a href="/dashboard" class="btn btn-dark">MY ACCOUNT</a></center>
               </div>
             </div>
 
@@ -117,7 +117,7 @@
             
             
               <div class="card-body">
-                <center><a href="/projects" class="btn btn-dark">PROJECT IDEAS</a></center>
+                <center><a href="/news" class="btn btn-dark">CURRENT NEWS</a></center>
               </div>
             
           </div>
