--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -73,12 +73,12 @@
             <div class="row">
                 <div class="col-md-6 login-form-1">
                     <h3>Create account</h3>
-                    <form action="/signup" method="POST">
+                    <form action="/dashboard" >
                         <div class="form-group">
                             <input type="email" class="form-control" name="smail" placeholder="Your Email *" value="" />
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" name="spassword" placeholder="Your Password *" value="" required/>
+                            <input type="password" class="form-control" name="spassword" placeholder="Your Password *" value="" />
                         </div>
                         <br>
                         <div class="form-group">
@@ -86,7 +86,7 @@
                         </div>
                     </form>
                         <div class="form-group">
-                            <a href="#" class="btnForgetPwd">Forgot Password?</a>
+                            <a href="/dashboard" class="btnForgetPwd">Forgot Password?</a>
                         </div>
                     
                     
@@ -96,12 +96,12 @@
                         <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
                     </div>
                     <h3>Login Form</h3>
-                    <form action="/login" method="POST">
+                    <form action="/dashboard" >
                         <div class="form-group">
                             <input type="email" class="form-control" placeholder="Your Email *" name="email" value="" />
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Your Password *" name="password" value="" required/>
+                            <input type="password" class="form-control" placeholder="Your Password *" name="password" value="" />
                         </div>
                         <br>
                         <div class="form-group">
@@ -110,7 +110,7 @@
                     </form>
                         <div class="form-group">
 
-                            <a href="#" class="btnForgetPwd" value="Login">Forget Password?</a>
+                            <a href="/dash" class="btnForgetPwd" value="Login">Forget Password?</a>
                         </div>
                     </form>
                 </div>
