--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Journal Entry</title>
+    <title>Task Scheduler</title>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"></script>
-    <style>
+      <style>
         body{
       background-image: url("/assets/bgg.jpg");
       background-size: cover;
@@ -18,7 +18,7 @@
       background-repeat: no-repeat;
     }
     .btn {
-  background-color: black; /* Blue background */
+  background-color: green; /* Blue background */
   border: none; /* Remove borders */
   color: white; /* White text */
   
@@ -54,20 +54,38 @@ input[type=text]:focus {
     </style>
 </head>
 <body>
-  
-
-    <br>
-    <br><br>    
-    <form action="/addJournal" method="post">  
-        <center><input type="text" name="title" placeholder="Enter the title">
-        
-        <br><br>
-        <textarea name="content" placeholder="Space to share..."></textarea>
-        <br><br>
-        <input name="date" type="date">
-        <br><br>
-        <input type="submit" class="btn btn-info" value="Confirm Entry">
-    </center>
+    <a href="/dashboard"><button class="btn" style="float: left;" ><i class="fa fa-arrow-left"></i>   Back&nbsp;</button></a>
+    <br><br>
+    <center><i><strong> <b><h1 style="font-weight: 700; text-shadow: 4px 4px black; color: white">Task Scheduler</h1></b></strong></i>
+    <br><br>
+    <form action="addTask" method="POST">
+      <input name="task" id="task" type="text" placeholder="    Enter what task you want to perform !    ">  
+      <input type="submit" value="Add">
+      <img src="/assets/send.svg" width="4%" height="4%">
     </form>
+     <p id="demo"></p>
+
+     <div class="tasks">
+      <% for ( var i = 0; i < tasks.length; i++){ var datum=tasks[i]; %> 
+      <%= datum %>
+      <form action="/deleteTask" method="post">
+        <input type="hidden" name="taskid" value="<%= datum._id %>">
+
+     <div class="card" style="width: 40rem;">
+      <div class="card-body">
+        <h5 class="card-title"><%= datum.task %></h5>
+        <p class="card-text"><%= datum.date %></p>
+        <button type="submit" class="btn btn-primary">Done</a>
+      </div>
+    </div>
+    </form>
+
+    <% } %>
+    
+    <br><br>
+
+    </div>
+  </center>
+  
 </body>
 </html>
